# temp-bot

./: .gitignore  CMakeLists.txt  main.cc
_headers/: miaBot.h
_headers/ecs/: definitions.h  ecs.h  entityCounter.h  eventManager.h
_headers/ecs/components/: groupComponent.h  lobbyComponent.h  preparationComponent.h  queueComponent.h  roleComponent.h  userGroupComponent.h
_headers/ecs/systems/: matchmakingSystem.h  timeSystem.h
_headers/events/: event.h  eventLanguage.h  eventTranslator.h
_lib/basic_lib/: basicLib.h
_lib/component_array/: componentArray.h
_lib/queue/: shared_queue.h
_source/: CMakeLists.txt  miaBot.cpp
_source/ecs/: CMakeLists.txt  ecs.cpp  eventManager.cpp
_source/ecs/systems/: CMakeLists.txt  matchmakingSystem.cpp  timeSystem.cpp
discordpp/lib/nlohmannjson/: CMakeLists.txt
lib/discordpp/discordpp/: bot.hh
lib/discordpp/lib/nlohmannjson/: README.md
lib/rest-beast/discordpp/: rest-beast.hh
